src/test/ui/suggestions/for-i-in-vec.stderr
error[E0507]: cannot move out of `self.v` which is behind a shared reference
  --> $DIR/for-i-in-vec.rs:10:18
   |
LL |         for _ in self.v {
   |                  ^^^^^^
   |                  |
   |                  move occurs because `self.v` has type `std::vec::Vec<u32>`, which does not implement the `Copy` trait
   |                  help: consider iterating over a slice of the `Vec<_>`'s content: `&self.v`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
